# Regioinvent

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
conda/recipe/: bld.bat  build.sh  meta.yaml
doc/: demo.ipynb
src/regioinvent/: main.py  wurst_compat.py
src/regioinvent/workflows/: __init__.py  lcia_methods.py  spatialization.py
src/regioinvent/workflows/regionalization/: __init__.py  consumption_markets.py  elem_spatialization.py  first_order.py  io_ops.py  pipeline.py  second_order.py  transformations.py
tests/: test_demo_workflow_lca_regression.py  test_entire_workflow.py  test_scores.py
