[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "regioinvent"
authors = [
  { name="Maxime Agez", email="maxime.agez@polymtl.ca" }
]
maintainers = [
  { name="Maxime Agez", email="maxime.agez@polymtl.ca" }
]
description = "Python class regionalizing processes from the ecoinvent database using trade date from the UN COMTRADE database and common sense."
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "tqdm",
    "wurst",
]

[project.optional-dependencies]
bw2 = [
    "bw2data<4.0.0",
    "bw2io<0.9.0",
    "bw2calc<2.0.0",
]
bw25 = [
    "bw2data>=4.0.0",
    "bw2io>=0.9.0",
    "bw2calc>=2.0.0",
]

[project.urls]
source = "https://github.com/CIRAIG/Regioinvent/"
homepage = "https://github.com/CIRAIG/Regioinvent/"
tracker = "https://github.com/CIRAIG/Regioinvent/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "regioinvent.__version__"}

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 100
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
